# printacc

./: .gitignore  .travis.yml  README.md  pyproject.toml
printacc/: manage.py  pytest.ini
printacc/accounts/: admin.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py
printacc/accounts/management/commands/: create-superuser.py
printacc/accounts/migrations/: 0001_initial.py  0002_auto_20201013_1006.py  0003_auto_20201013_1021.py  0004_auto_20201013_1303.py  0005_remove_plotter_location.py  0006_auto_20201014_2239.py  0007_auto_20201015_1001.py  0008_auto_20201015_1054.py  0009_auto_20201015_1055.py
printacc/accounts/views/: api.py  dealers.py  patterns.py  plotters.py  users.py
printacc/printacc/: settings.py  urls.py  wsgi.py
